tests/snapshots/custom_functions/fmSyntaxColorizer/_IsRUNTIME - ID 11.txt.snap
---
source: src/main.rs
expression: output_content
---
Falls( Position( Hole ( ProgrammVersion ) ; "Runtime" ; 1 ;1 ) ; 1 )
