tests/snapshots/custom_functions/fmSyntaxColorizer/_Label - ID 36.txt.snap
---
source: src/main.rs
expression: output_content
---
Falls( NICHT IstLeer( pText ) ; pPrefix & pText & pSuffix )
