tests/snapshots/custom_functions/fmSyntaxColorizer/_SP - ID 12.txt.snap
---
source: src/main.rs
expression: output_content
---
/* _SP( pN )

Returns the pNth value in the script parameter.
A plus after the number, e.g. "2+" means 'or more'.

20151220 MrW Version 1.1 With automatic decoding of encoded returns
20120817 MrW Version 1.0
*/
_SPDecode(
Falls(
ZeichenRechts( pN ; 1 ) = "+" ; SetzeVar( vPos = Position( "¶" & Hole( ScriptParameter ) ; "¶" ; 1 ; pN ) ; Falls( vPos ; ZeichenRechts( Hole( ScriptParameter ) ; Länge( Hole( ScriptParameter ) ) - vPos +1 ) ; "" ) ) ; 
pN > 0 ; HoleWert( Hole( ScriptParameter ) ; pN )
))
