tests/snapshots/custom_functions/fmSyntaxColorizer/_SPDecode - ID 37.txt.snap
---
source: src/main.rs
expression: output_content
---
/* _SPDecode ( pText )
Decodes CR and LF characters passed in parameters

20160103 MrW Version 2 Decode CR as Division Pilcrow Division and LF as Division Lozenge Division
20151222 MrW Version 1
*/
Austauschen( pText ;
[ Char( 8725 ) & Char( 182 ) & Char( 8725 ) ; "¶" ]; /* ¶ <- ∕ ¶ ∕ = Division Pilcrow Division */
[ Char( 8725 ) & Char( 9674 ) & Char( 8725 ) ; Char(10) ] /* LF <- ∕ ◊ ∕ = Division Lozenge Division */
)
