tests/snapshots/custom_functions/fmSyntaxColorizer/_SR - ID 13.txt.snap
---
source: src/main.rs
expression: output_content
---
/* _SR( pN )

Returns the pNth value in the script result.
A plus after the number, e.g. "2+" means 'or more'.

20151220 MrW Version 1.1 With automatic decoding of encoded returns
20120817 MrW Version 1.0
*/
_SPDecode(
Falls(
ZeichenRechts( pN ; 1 ) = "+" ; SetzeVar( vPos = Position( "¶" & Hole( ScriptErgebnis ) ; "¶" ; 1 ; pN ) ; Falls( vPos ; ZeichenRechts( Hole( ScriptErgebnis ) ; Länge( Hole( ScriptErgebnis ) ) - vPos +1 ) ; "" ) ) ; 
pN > 0 ; HoleWert( Hole( ScriptErgebnis ) ; pN )
))
