tests/snapshots/custom_functions/fmSyntaxColorizer/_TextGetRRGGBB - ID 46.txt.snap
---
source: src/main.rs
expression: output_content
---
SetzeVar([ 
vCSS = LiesAlsCSS ( pText ) ;
vScrapePattern = "color: #" ;
vPos = Position( vCSS ; vScrapePattern ; 1 ; 1 ) ;
vHex = Falls( vPos ; WörterLinks( ZeichenMitte( vCSS ; vPos + Länge( vScrapePattern )  ; 6 ) ; 1 ) ; "000000" ) 
];
vHex
)
